# vk-rs

./: .gitignore  .gitmodules  .travis.yml  README.md  index.html  search-index.js
bitflags/__core/char/: struct.EncodeUtf16.html  struct.EncodeUtf8.html  struct.EscapeDefault.html  struct.EscapeUnicode.html
bitflags/__core/clone/: trait.Clone.html
bitflags/__core/cmp/: trait.Eq.html  trait.Ord.html  trait.PartialEq.html  trait.PartialOrd.html
bitflags/__core/default/: trait.Default.html
bitflags/__core/fmt/: trait.Debug.html
bitflags/__core/hash/: trait.Hash.html
bitflags/__core/iter/: struct.Chain.html  struct.Cloned.html  struct.Cycle.html  struct.Empty.html  struct.Enumerate.html  struct.Filter.html  struct.FilterMap.html  struct.FlatMap.html  struct.Fuse.html  struct.Inspect.html  struct.Map.html  struct.Once.html  struct.Peekable.html  struct.Repeat.html  struct.Rev.html  struct.Scan.html  struct.Skip.html  struct.SkipWhile.html  struct.StepBy.html  struct.Take.html  struct.TakeWhile.html  struct.Zip.html  trait.DoubleEndedIterator.html  trait.ExactSizeIterator.html  trait.Iterator.html
bitflags/__core/ops/: enum.RangeInclusive.html  struct.Range.html  struct.RangeFrom.html  trait.CoerceUnsized.html
bitflags/__core/option/: struct.IntoIter.html  struct.Iter.html  struct.IterMut.html
bitflags/__core/result/: enum.Result.html  struct.IntoIter.html  (+2 more)
boolinator/: index.html  trait.Boolinator.html
implementors/boolinator/: trait.Boolinator.js
src/boolinator/: lib.rs.html
vk/: Cargo.toml  build.rs
vk/src/: lib.rs
vk_api/: Cargo.toml  README.md
vk_api/src/: lib.rs
vk_generator/: Cargo.toml  README.md  build.rs  genideal.md  index.html  sidebar-items.js  struct.GenConfig.html  struct.VkRegistry.html  struct.VkVersion.html
vk_generator/examples/: gen_global.rs  gen_struct.rs
vk_generator/generator/: sidebar-items.js  struct.GenConfig.html
vk_generator/registry/: sidebar-items.js  struct.VkRegistry.html  struct.VkVersion.html
vk_generator/src/: crawler.rs  lib.rs
vk_generator/src/generator/: bitmask_impl.rs  bitmask_struct.rs  clone_array.rs  command_module.rs  custom_impl_clone.rs  custom_impl_debug.rs  defines.rs  handle_dispatchable.rs  handle_nondispatchable.rs  load_fn.rs  mod.rs  prelude.rs  prelude_common.rs  prelude_global_gen.rs  prelude_struct_gen.rs  union_cloned.rs
vk_generator/src/generator/hardcoded/: union_ClearColorValue.rs  union_ClearValue.rs
vk_generator/src/registry/: crawler.rs  mod.rs
vk_generator/tests/: lib.rs  libc_dummy.rs
(+47 files in other folders)
