[package]
name = "vk_api"
version = "1.0.36"
authors = ["Osspial <osspial@gmail.com>"]

description = "The Vulkan API XML exposed as a byte string constant"
repository = "https://github.com/Osspial/vk-rs"
documentation = "https://docs.rs/vk_api/"
readme = "README.md"

keywords = ["vulkan", "khronos"]
license = "MIT"

exclude = [
    "./Cargo.lock",
    "./target"
]
