[package]
name = "vk_generator"
version = "0.1.3"
authors = ["Osspial <osspial@gmail.com>"]

description = "Generate Rust bindings to the Vulkan API"
repository = "https://github.com/Osspial/vk-rs"
documentation = "https://docs.rs/vk_generator/"
readme = "./README.md"

keywords = ["vulkan", "khronos"]
license = "MIT"

exclude = [
    "./Cargo.lock",
    "./target"
]

[features]
unstable_generator_api = []

[dependencies]
xml-rs = "0.3.0"
boolinator = "0.1.0"

[dev-dependencies]
vk_api = {path = "../vk_api", version="1.0"}